[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "garant-mcp"
version = "1.0.0"
description = "MCP-сервер для подключения к правовой базе ГАРАНТ через API Гарант-Коннект v2"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
garant-mcp = "server:mcp.run"

[tool.setuptools.packages.find]
where = ["."]
